[gd_scene load_steps=3 format=3 uid="uid://3obg6g0p2lg5"]

[ext_resource type="Theme" uid="uid://bqv6tifw6myqj" path="res://largefront.tres" id="1_8ct7e"]
[ext_resource type="Script" path="res://langdocs/prog_54b.gd" id="1_xwusb"]

[node name="prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwusb")

[node name="txtInt1" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 22.0
offset_right = 277.0
offset_bottom = 127.0
theme = ExtResource("1_8ct7e")
text = "Number1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtInt2" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 142.0
offset_right = 278.0
offset_bottom = 247.0
theme = ExtResource("1_8ct7e")
text = "Number2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtInt3" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 267.0
offset_right = 278.0
offset_bottom = 372.0
theme = ExtResource("1_8ct7e")
text = "Number3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtInt4" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 392.0
offset_right = 276.0
offset_bottom = 497.0
theme = ExtResource("1_8ct7e")
text = "Number4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtInt5" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 526.0
offset_right = 280.0
offset_bottom = 631.0
theme = ExtResource("1_8ct7e")
text = "Number5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtInt6" type="Label" parent="."]
offset_left = 261.0
offset_top = 520.0
offset_right = 540.0
offset_bottom = 625.0
theme = ExtResource("1_8ct7e")
text = "Number6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Int_tb1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 18.0
offset_right = 537.0
offset_bottom = 125.0
theme = ExtResource("1_8ct7e")
text = "475"
alignment = 1

[node name="Int_tb2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 144.0
offset_right = 539.0
offset_bottom = 251.0
theme = ExtResource("1_8ct7e")
text = "821"
alignment = 1

[node name="Int_tb3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 264.0
offset_right = 537.0
offset_bottom = 371.0
theme = ExtResource("1_8ct7e")
text = "369"
alignment = 1

[node name="Int_tb4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 392.0
offset_right = 535.0
offset_bottom = 499.0
theme = ExtResource("1_8ct7e")
text = "562"
alignment = 1

[node name="BnCal" type="Button" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 15.0
offset_right = 1092.0
offset_bottom = 190.0
theme = ExtResource("1_8ct7e")
text = "Calulate"

[node name="BnClear" type="Button" parent="."]
offset_left = 632.0
offset_top = 217.0
offset_right = 1094.0
offset_bottom = 392.0
theme = ExtResource("1_8ct7e")
text = "Clear"

[node name="BnExit" type="Button" parent="."]
offset_left = 634.0
offset_top = 417.0
offset_right = 1096.0
offset_bottom = 592.0
theme = ExtResource("1_8ct7e")
text = "Exit"

[connection signal="pressed" from="BnCal" to="." method="_on_bn_cal_pressed"]
[connection signal="pressed" from="BnClear" to="." method="_on_bn_clear_pressed"]
[connection signal="pressed" from="BnExit" to="." method="_on_bn_exit_pressed"]
